--- a/studentsensor-main/public/pages/report.html
+++ b/studentsensor-main/public/pages/report.html
@@ -21,21 +21,22 @@
       <div
         class="d-flex align-items-center justify-content-between bg-byu text-white"
       >
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center flex-grow-1 min-w-0">
           <button
-            class="btn fs-2 me-2 ms-0 ps-0 text-white"
+            class="btn fs-2 me-2 ms-0 ps-0 text-white flex-shrink-0"
             role="close-button"
+            aria-label="Back to reports"
           >
             <span class="bi-chevron-left"></span><span class="bi-table"></span>
           </button>
           <div
             contenteditable="plaintext-only"
-            class="px-3 py-2 fs-3 text-truncate"
+            class="px-3 py-2 fs-3 text-truncate min-w-0"
             id="report-name"
           ></div>
         </div>
 
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center flex-shrink-0">
           <div
             id="edit-button-wrapper"
             class="d-flex align-items-center me-4 pb-1"
