--- a/studentsensor-main/public/pages/reports.html
+++ b/studentsensor-main/public/pages/reports.html
@@ -33,6 +33,14 @@
         </div>
         <div class="d-flex align-items-center flex-shrink-0">
           <div
+            id="openai-status-indicator"
+            class="openai-status-pill openai-status-unknown me-3"
+            title="Checking OpenAI API status..."
+          >
+            <span class="openai-status-dot" aria-hidden="true"></span>
+            <span id="openai-status-text">OpenAI: Checking...</span>
+          </div>
+          <div
             id="edit-button-wrapper"
             class="d-flex align-items-center me-4 pb-1"
           >
