--- a/studentsensor-main/public/pages/report.html
+++ b/studentsensor-main/public/pages/report.html
@@ -183,7 +183,10 @@
             })
         );
 
-        document.getElementById("report-spinner").remove();
+        const reportSpinner = document.getElementById("report-spinner");
+        if (reportSpinner) {
+          reportSpinner.remove();
+        }
       } catch (error) {
         console.error("Error loading report:", error);
       }
