--- a/studentsensor-main/public/pages/report.html
+++ b/studentsensor-main/public/pages/report.html
@@ -36,26 +36,26 @@
           ></div>
         </div>
 
-        <div class="d-flex align-items-center flex-shrink-0">
+        <div class="d-flex align-items-center flex-shrink-0 header-actions">
           <div
             id="edit-button-wrapper"
             class="d-flex align-items-center me-4 pb-1"
           >
             <label
-              class="form-check-label bi-pencil-fill fs-5 px-2 py-2 text-white"
+              class="form-check-label bi-pencil-fill px-2 py-2 text-white header-action-icon"
               for="editing"
               style="cursor: pointer;"
               title="Edit Mode"
             ></label>
             <div
-              class="form-check form-switch fs-4"
+              class="form-check form-switch"
               data-bs-toggle="tooltip"
               title="Toggle Edit Mode - Enable to edit comments"
               data-bs-placement="bottom"
             >
               <input class="form-check-input" type="checkbox" id="editing" />
             </div>
-            <span class="text-white small ms-2 d-none d-md-inline">Edit</span>
+            <span class="text-white ms-2 d-none d-md-inline header-action-text">Edit</span>
           </div>
           <button
             id="chart-button"
@@ -158,9 +158,8 @@
 
     <!-- Scripts -->
     <script src="/styles/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script src="/js/bootstrap-slider.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script type="module">
       import { Report } from "/js/report.mjs";
