--- a/studentsensor-main/public/pages/reports.html
+++ b/studentsensor-main/public/pages/reports.html
@@ -29,7 +29,8 @@
             Student Rating Analysis
           </div>
         </div>
-        <div class="d-flex align-items-center flex-shrink-0">
+        <div class="d-flex align-items-center flex-shrink-0 header-actions">
+          <span id="welcome-user" class="header-user-greeting me-3 d-none d-md-inline"></span>
           <div
             id="openai-status-indicator"
             class="openai-status-pill openai-status-unknown me-3"
@@ -43,20 +44,20 @@
             class="d-flex align-items-center me-4 pb-1"
           >
             <label
-              class="form-check-label bi-pencil-fill fs-5 px-2 py-2 text-white"
+              class="form-check-label bi-pencil-fill px-2 py-2 text-white header-action-icon"
               for="editing"
               style="cursor: pointer;"
               title="Edit Mode"
             ></label>
             <div
-              class="form-check form-switch fs-4"
+              class="form-check form-switch"
               data-bs-toggle="tooltip"
               title="Toggle Edit Mode - Enable to edit reports"
               data-bs-placement="bottom"
             >
               <input class="form-check-input" type="checkbox" id="editing" />
             </div>
-            <span class="text-white small ms-2 d-none d-md-inline">Edit</span>
+            <span class="text-white ms-2 d-none d-md-inline header-action-text">Edit</span>
           </div>
           <button
             class="btn btn-byu fs-2 bi-plus-lg text-white"
@@ -65,13 +66,13 @@
             title="Create a new report"
           ></button>
           <a
-            class="btn btn-byu fs-2 bi-box-arrow-right text-white d-flex align-items-center"
+            class="btn btn-byu bi-box-arrow-right text-white d-flex align-items-center header-logout-link"
             href="/logout"
             data-bs-toggle="tooltip"
             title="Logout"
             data-bs-placement="bottom"
           >
-            <span class="d-none d-md-inline ms-2 small">Logout</span>
+            <span class="d-none d-md-inline ms-2 header-action-text">Logout</span>
           </a>
         </div>
       </div>
